--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/disambiguation.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/disambiguation.jspx
@@ -117,23 +117,25 @@
 					<c:choose>
 						<c:when test="${fn:length(command.suggestedPersonNames) gt 0}">
 							<div class="list-group">
-								<c:forEach var='personName' items="${command.suggestedPersonNames}">
+								<c:forEach var='rel' items="${command.personSuggestions}">
 									<div class="list-group-item">
-										<a class='btnLinkPerson' data-toggle="modal" data-target="#linkPerson" href="#linkPerson" data-person-url="${absoluteUrlGenerator.getPersonUrl(personName.person.personId)}" data-person-id="${fn:escapeXml(personName.person.personId)}" >
+										<a class='btnLinkPerson' data-toggle="modal" data-target="#linkPerson" href="#linkPerson" data-person-url="${absoluteUrlGenerator.getPersonUrl(rel.person.personId)}" data-person-id="${fn:escapeXml(rel.person.personId)}" >
 											<span class="authorName">
-												<c:if test="${not empty personName.person.mainName.firstName}"><c:out value="${personName.person.mainName.firstName} "/></c:if>
-												<c:if test="${not empty personName.person.mainName.lastName}"><c:out value="${personName.person.mainName.lastName}"/></c:if>
+												<c:if test="${not empty rel.person.mainName.firstName}"><c:out value="${rel.person.mainName.firstName} "/></c:if>
+												<c:if test="${not empty rel.person.mainName.lastName}"><c:out value="${rel.person.mainName.lastName}"/></c:if>
+												<!-- 
 												<c:if test="${personName.person.mainName.personNameChangeId != personName.personNameChangeId}">
 													(
 													<c:if test="${not empty personName.firstName}"><c:out value="${personName.firstName} "/></c:if>
 													<c:if test="${not empty personName.lastName}"><c:out value="${personName.lastName}"/></c:if>
 													)
 												</c:if>
+												 -->
 											</span>
 											<c:set var="firstInfo" value="${true}"/>
-											<c:if test="${not empty personName.person.academicDegree}">                              <c:choose><c:when test="${firstInfo}"> (<c:set var="firstInfo" value="${false}"/></c:when><c:otherwise>, </c:otherwise></c:choose><c:out value="${personName.person.academicDegree}"/></c:if>	 
-											<c:if test="${not empty personName.person.disambiguatingPublication.post}">              <c:choose><c:when test="${firstInfo}"> (<c:set var="firstInfo" value="${false}"/></c:when><c:otherwise>, </c:otherwise></c:choose><c:out value="${personName.person.disambiguatingPublication.post.resource.title}"/></c:if>
-											<c:if test="${not empty personName.person.disambiguatingPublication.post.resource.year}"><c:choose><c:when test="${firstInfo}"> (<c:set var="firstInfo" value="${false}"/></c:when><c:otherwise>, </c:otherwise></c:choose><c:out value="${personName.person.disambiguatingPublication.post.resource.year}"/></c:if>
+											<c:if test="${not empty rel.person.academicDegree}">                              <c:choose><c:when test="${firstInfo}"> (<c:set var="firstInfo" value="${false}"/></c:when><c:otherwise>, </c:otherwise></c:choose><c:out value="${rel.person.academicDegree}"/></c:if>	 
+											<c:if test="${not empty rel.post}">              <c:choose><c:when test="${firstInfo}"> (<c:set var="firstInfo" value="${false}"/></c:when><c:otherwise>, </c:otherwise></c:choose><c:out value="${rel.post.resource.title}"/></c:if>
+											<c:if test="${not empty rel.post.resource.year}"><c:choose><c:when test="${firstInfo}"> (<c:set var="firstInfo" value="${false}"/></c:when><c:otherwise>, </c:otherwise></c:choose><c:out value="${rel.post.resource.year}"/></c:if>
 											<c:choose><c:when test="${not firstInfo}">)</c:when><c:otherwise> (<c:out value="${textNoFurtherInfo}"/>)</c:otherwise></c:choose>
 										</a>
 									</div>
